commit the selection of books