@@ -1,27 +1,27 @@
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class SpellBook extends MagicBook {
-    private final int magicPoint;
+    private int magicPoint;
 
     public SpellBook(String id, String title, String author, int magicPoint) {
-        super(id,title,author);
+        super(id, title, author);
         this.magicPoint = magicPoint;
     }
 
     @Override
-    public String toString() {
-        return super.toString() + String.format(", Magic Point: %d", magicPoint);
-    }
-
-    @Override
     public void read(User user) {
-
+        user.addMagicPoint(magicPoint);
+        System.out.println("User now has Magic power of " + user.getMagicPoint() + " and Dark magic power of " + user.getDarkMagicPoint());
     }
 
     @Override
     public Collection<? extends Action> allowableActions() {
-        return List.of();
+        return Collections.emptyList(); // Simplified for example
+    }
+
+    @Override
+    public String toString() {
+        return super.toString() + " | Magic Point: " + magicPoint;
     }
 }
-
